Working example with generated refs (#1)
