# src/swagger.json
@@ -6,72 +6,7 @@
     "version": "1.0.0"
   },
   "paths": {
-    "/internal/api/individual/referenceNumber/{referenceNumber}": {
-      "get": {
-        "summary": "Returns an individual",
-        "description": "Returns individual profile based on reference number",
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "Individual response"
-          }
-        }
-      },
-      "parameters": [
-        {
-          "name": "referenceNumber",
-          "in": "path",
-          "description": "Individual reference number",
-          "required": true,
-          "schema": {
-            "type": "integer",
-            "format": "int32"
-          }
-        }
-      ]
-    },
-    "/internal/api/individual/save/individual": {
-      "post": {
-        "summary": "Saves individual",
-        "description": "Create new / update exisitng individual profile",
-        "produces": [
-          "text/plain"
-        ],
-        "responses": {
-          "200": {
-            "description": "Individual reference number"
-          }
-        },
-        "requestBody": {
-          "description": "Individual paylod",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "address": {
-                    "type": "string"
-                  }
-                },
-                "required": [
-                  "id",
-                  "name",
-                  "address"
-                ],
-                "additionalProperties": false,
-                "type": "object"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/entity": {
+    "/api/person": {
       "post": {
         "summary": "summary todo",
         "description": "description todo",
@@ -89,31 +24,14 @@
           "content": {
             "application/json": {
               "schema": {
-                "properties": {
-                  "id": {
-                    "type": "number"
-                  },
-                  "name": {
-                    "type": "string"
-                  },
-                  "address": {
-                    "type": "string"
-                  }
-                },
-                "required": [
-                  "id",
-                  "name",
-                  "address"
-                ],
-                "additionalProperties": false,
-                "type": "object"
+                "$ref": "#/components/schema/Person"
               }
             }
           }
         }
       }
     },
-    "/api/entity/{id}": {
+    "/api/person/{id}": {
       "get": {
         "summary": "summary todo",
         "description": "description todo",
@@ -136,6 +54,57 @@
           }
         }
       ]
+    }
+  },
+  "components": {
+    "schema": {
+      "Address": {
+        "properties": {
+          "city": {
+            "type": "string"
+          },
+          "postCode": {
+            "type": "string"
+          },
+          "countryIsoCode": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "city",
+          "postCode",
+          "countryIsoCode"
+        ],
+        "additionalProperties": false,
+        "type": "object"
+      },
+      "Person": {
+        "properties": {
+          "id": {
+            "type": "number"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName1": {
+            "type": "string"
+          },
+          "address": {
+            "items": {
+              "$ref": "#/components/schema/Address"
+            },
+            "type": "array"
+          }
+        },
+        "required": [
+          "id",
+          "firstName",
+          "lastName1",
+          "address"
+        ],
+        "additionalProperties": false,
+        "type": "object"
+      }
     }
   }
 }
